// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <TestResults /> should renders correctly and testing another methods 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className=""
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="testResultsMain"
            isBtnExpandVisible={false}
            isBtnTableVisible={false}
            name="testResultsMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Test Results"
          />
          <PluginMainPanel
            columnNameSortBy="testName"
            emptyDataMessage="No test results"
            headers={
              Array [
                Object {
                  "key": "testName",
                  "title": "Test Name",
                  "width": "30%",
                },
                Object {
                  "key": "sampleTaken",
                  "title": "Sample Taken",
                  "transformer": [Function],
                  "width": "26%",
                },
                Object {
                  "key": "dateCreated",
                  "title": "Date Created",
                  "transformer": [Function],
                  "width": "25%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "19%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "SourceID",
                },
              ]
            }
            id="f6763678-71dc-49c8-b6d1-88a5871a10a6"
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            setOffset={[Function]}
            sortingOrder="asc"
            table="testResults"
            totalEntriesAmount={0}
          />
        </div>
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <TestResults /> should renders correctly and testing context and lifecycle componentWillReceiveProps 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="col-panel-main"
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="testResultsMain"
            isBtnExpandVisible={true}
            isBtnTableVisible={false}
            name="testResultsMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Test Results"
          />
          <PluginMainPanel
            columnNameSortBy="testName"
            emptyDataMessage="No test results"
            headers={
              Array [
                Object {
                  "key": "testName",
                  "title": "Test Name",
                  "width": "30%",
                },
                Object {
                  "key": "sampleTaken",
                  "title": "Sample Taken",
                  "transformer": [Function],
                  "width": "26%",
                },
                Object {
                  "key": "dateCreated",
                  "title": "Date Created",
                  "transformer": [Function],
                  "width": "25%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "19%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "SourceID",
                },
              ]
            }
            id="f6763678-71dc-49c8-b6d1-88a5871a10a6"
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            setOffset={[Function]}
            sortingOrder="asc"
            table="testResults"
            totalEntriesAmount={0}
          />
        </div>
      </Col>
      <Col
        bsClass="col"
        className="col-panel-details"
        componentClass="div"
        xs={12}
      >
        <TestResultsDetail
          currentPanel="testResultsDetail"
          detail={
            Object {
              "author": "Dr Lab",
              "conclusion": "abnormal result indicating infection",
              "dateCreated": 1439935862518,
              "sampleTaken": 1440454262518,
              "source": "marand",
              "sourceId": "f6763678-71dc-49c8-b6d1-88a5871a10a6",
              "status": "Final",
              "testName": "complete blood count",
              "testResults": Array [
                Object {
                  "comment": "indicates infection",
                  "normalRange": " - ",
                  "result": "white blood cell count",
                  "unit": "10*9/l",
                  "value": "13.6",
                },
              ],
            }
          }
          editedPanel={Object {}}
          expandedPanel="all"
          isSubmit={false}
          name="testResultsDetail"
          onCancel={[Function]}
          onEdit={[Function]}
          onExpand={[Function]}
          onSaveSettings={[Function]}
          onShow={[Function]}
          openedPanel="testResultPanel"
        />
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <TestResults /> should renders correctly with empty store 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className=""
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="testResultsMain"
            isBtnExpandVisible={false}
            isBtnTableVisible={false}
            name="testResultsMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Test Results"
          />
          <PluginMainPanel
            columnNameSortBy="testName"
            emptyDataMessage="No test results"
            headers={
              Array [
                Object {
                  "key": "testName",
                  "title": "Test Name",
                  "width": "30%",
                },
                Object {
                  "key": "sampleTaken",
                  "title": "Sample Taken",
                  "transformer": [Function],
                  "width": "26%",
                },
                Object {
                  "key": "dateCreated",
                  "title": "Date Created",
                  "transformer": [Function],
                  "width": "25%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "19%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "SourceID",
                },
              ]
            }
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            setOffset={[Function]}
            sortingOrder="asc"
            table="testResults"
            totalEntriesAmount={0}
          />
        </div>
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <TestResults /> should renders correctly with testResultPanel and testing Detail Panel 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="col-panel-main"
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="testResultsMain"
            isBtnExpandVisible={true}
            isBtnTableVisible={false}
            name="testResultsMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Test Results"
          />
          <PluginMainPanel
            columnNameSortBy="testName"
            emptyDataMessage="No test results"
            headers={
              Array [
                Object {
                  "key": "testName",
                  "title": "Test Name",
                  "width": "30%",
                },
                Object {
                  "key": "sampleTaken",
                  "title": "Sample Taken",
                  "transformer": [Function],
                  "width": "26%",
                },
                Object {
                  "key": "dateCreated",
                  "title": "Date Created",
                  "transformer": [Function],
                  "width": "25%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "19%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "SourceID",
                },
              ]
            }
            id="f6763678-71dc-49c8-b6d1-88a5871a10a6"
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            setOffset={[Function]}
            sortingOrder="asc"
            table="testResults"
            totalEntriesAmount={0}
          />
        </div>
      </Col>
      <Col
        bsClass="col"
        className="col-panel-details"
        componentClass="div"
        xs={12}
      >
        <TestResultsDetail
          currentPanel="testResultsDetail"
          detail={
            Object {
              "author": "Dr Lab",
              "conclusion": "abnormal result indicating infection",
              "dateCreated": 1439935862518,
              "sampleTaken": 1440454262518,
              "source": "marand",
              "sourceId": "f6763678-71dc-49c8-b6d1-88a5871a10a6",
              "status": "Final",
              "testName": "complete blood count",
              "testResults": Array [
                Object {
                  "comment": "indicates infection",
                  "normalRange": " - ",
                  "result": "white blood cell count",
                  "unit": "10*9/l",
                  "value": "13.6",
                },
              ],
            }
          }
          editedPanel={Object {}}
          expandedPanel="all"
          isSubmit={false}
          name="testResultsDetail"
          onCancel={[Function]}
          onEdit={[Function]}
          onExpand={[Function]}
          onSaveSettings={[Function]}
          onShow={[Function]}
          openedPanel="testResultPanel"
        />
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <TestResults /> should renders correctly with testResultPanel and testing Detail Panel 2`] = `
<section
  className="page-wrapper"
>
  <div
    className="section full-panel full-panel-details"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="col-panel-details"
        componentClass="div"
        xs={12}
      >
        <TestResultsDetail
          currentPanel="testResultsDetail"
          detail={
            Object {
              "author": "Dr Lab",
              "conclusion": "abnormal result indicating infection",
              "dateCreated": 1439935862518,
              "sampleTaken": 1440454262518,
              "source": "marand",
              "sourceId": "f6763678-71dc-49c8-b6d1-88a5871a10a6",
              "status": "Final",
              "testName": "complete blood count",
              "testResults": Array [
                Object {
                  "comment": "indicates infection",
                  "normalRange": " - ",
                  "result": "white blood cell count",
                  "unit": "10*9/l",
                  "value": "13.6",
                },
              ],
            }
          }
          editedPanel={Object {}}
          expandedPanel="metaPanel"
          isSubmit={false}
          name="testResultsDetail"
          onCancel={[Function]}
          onEdit={[Function]}
          onExpand={[Function]}
          onSaveSettings={[Function]}
          onShow={[Function]}
          openedPanel="testResultPanel"
        />
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <TestResults /> should renders correctly with testResultPanel and testing Detail Panel 3`] = `
<section
  className="page-wrapper"
>
  <div
    className="section full-panel full-panel-details"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="col-panel-details"
        componentClass="div"
        xs={12}
      >
        <TestResultsDetail
          currentPanel="testResultsDetail"
          detail={
            Object {
              "author": "Dr Lab",
              "conclusion": "abnormal result indicating infection",
              "dateCreated": 1439935862518,
              "sampleTaken": 1440454262518,
              "source": "marand",
              "sourceId": "f6763678-71dc-49c8-b6d1-88a5871a10a6",
              "status": "Final",
              "testName": "complete blood count",
              "testResults": Array [
                Object {
                  "comment": "indicates infection",
                  "normalRange": " - ",
                  "result": "white blood cell count",
                  "unit": "10*9/l",
                  "value": "13.6",
                },
              ],
            }
          }
          editedPanel={Object {}}
          expandedPanel="metaPanel"
          isSubmit={false}
          name="testResultsDetail"
          onCancel={[Function]}
          onEdit={[Function]}
          onExpand={[Function]}
          onSaveSettings={[Function]}
          onShow={[Function]}
          openedPanel="testResultPanel"
        />
      </Col>
    </Row>
  </div>
</section>
`;
